# hefty

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  privacy.html
mac_app/hefty/hefty/: ContentView.swift  heftyApp.swift
mac_app/hefty/hefty.xcodeproj/: project.pbxproj
mac_app/hefty/hefty/Models/: FileEntry.swift  FileScanner.swift  TreemapLayout.swift
mac_app/hefty/hefty/Views/: BlockBorderView.swift  CircularContentView.swift  CircularWindowView.swift  FileListView.swift  FlameRingView.swift  MainWindowView.swift  StatusBarView.swift  ToolbarView.swift  TreemapView.swift
src/: lib.rs  main.rs  scanner.rs  treemap.rs  ui.rs
