[package]
name = "hefty"
version = "0.1.0"
edition = "2021"
description = "A fast CLI disk usage analyzer — find the hefty files hogging your disk space"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
bytesize = "1"
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
